Set up boilerplate

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cra-bootcamp-template",
+  "name": "project-3-frontend-bootcamp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
